--- a/agents-docs/content/docs/typescript-sdk/cli-reference.mdx
+++ b/agents-docs/content/docs/typescript-sdk/cli-reference.mdx
@@ -290,7 +290,7 @@ The `inkeep pull` command automatically selects the best available model for LLM
 
 1. **Anthropic Claude** (if `ANTHROPIC_API_KEY` is set): `claude-sonnet-4-5`
 2. **OpenAI GPT** (if `OPENAI_API_KEY` is set): `gpt-5.1`
-3. **Google Gemini** (if `GOOGLE_API_KEY` or `GOOGLE_GENERATIVE_AI_API_KEY` is set): `gemini-2.5-flash`
+3. **Google Gemini** (if `GOOGLE_GENERATIVE_AI_API_KEY` is set): `gemini-2.5-flash`
 
 The models are used for intelligent content merging when updating modified components, ensuring your local customizations are preserved while incorporating upstream changes.
 
