--- a/agents-docs/content/docs/typescript-sdk/push-pull-workflows.mdx
+++ b/agents-docs/content/docs/typescript-sdk/push-pull-workflows.mdx
@@ -120,7 +120,7 @@ The pull workflow synchronizes local files with remote configurations:
 
 - `ANTHROPIC_API_KEY` - Uses Claude Sonnet 4.5 (recommended)
 - `OPENAI_API_KEY` - Uses GPT-5.1  
-- `GOOGLE_API_KEY` or `GOOGLE_GENERATIVE_AI_API_KEY` - Uses Gemini 2.5 Flash
+- `GOOGLE_GENERATIVE_AI_API_KEY` - Uses Gemini 2.5 Flash
 
 ```bash
 # Choose one:
@@ -128,7 +128,7 @@ export ANTHROPIC_API_KEY=your_anthropic_key_here
 # OR
 export OPENAI_API_KEY=your_openai_key_here
 # OR  
-export GOOGLE_API_KEY=your_google_key_here
+export GOOGLE_GENERATIVE_AI_API_KEY=your_google_key_here
 ```
 
 The CLI automatically selects the first available model based on your configured API keys.
