--- a/agents-docs/content/docs/get-started/push-pull.mdx
+++ b/agents-docs/content/docs/get-started/push-pull.mdx
@@ -77,7 +77,7 @@ ANTHROPIC_API_KEY=your_api_key_here
 # or
 OPENAI_API_KEY=your_api_key_here
 # or
-GOOGLE_API_KEY=your_api_key_here
+GOOGLE_GENERATIVE_AI_API_KEY=your_api_key_here
 ```
 
 The CLI prioritizes Anthropic → OpenAI → Google.
@@ -87,8 +87,8 @@ Here are the models used:
 | Provider  | Model(s)                              | Where to Get API Key                                |
 | --------- | ------------------------------------- | --------------------------------------------------- |
 | Anthropic | Claude Sonnet 4.5 (extended thinking) | [Anthropic Console](https://console.anthropic.com/) |
-| OpenAI    | GPT-4.1                               | [OpenAI Platform](https://platform.openai.com/)     |
-| Google    | Gemini models (with thinking mode)    | [Google AI Studio](https://ai.google.dev/)          |
+| OpenAI    | GPT-5.1                               | [OpenAI Platform](https://platform.openai.com/)     |
+| Google    | Gemini 2.5 Flash                      | [Google AI Studio](https://ai.google.dev/)          |
 
 ### Step 1: Make an edit visually
 
