--- a/agents-docs/content/docs/pricing.mdx
+++ b/agents-docs/content/docs/pricing.mdx
@@ -4,11 +4,9 @@ description: Learn about Inkeep's pricing plans and features
 icon: "LuCreditCard"
 ---
 
-Inkeep offers two ways to get started: **Open Source** (free forever) and **Enterprise** (managed platform with dedicated support).
+Inkeep offers three ways to get started: **Open Source** (free forever), **Cloud** (managed deployment), and **Enterprise** (managed platform with dedicated support).
 
----
-
-## Open Source (Free)
+## Open Source (free)
 
 Everything you need to create agentic assistants, copilots, and workflows that help your customers and your team.
 
@@ -22,7 +20,16 @@ Includes:
 
 [Follow the &lt;1min Quick Start →](/get-started/quick-start)
 
----
+## Cloud
+
+Deploy your agents to Inkeep's managed cloud platform with llm usage-based billing.
+
+Everything in Open Source, plus:
+- Fully managed cloud hosting
+- No infrastructure management required
+- Transparent, usage-based pricing
+
+[Sign up for the Cloud waitlist →](https://inkeep.com/cloud-waitlist)
 
 ## Enterprise
 
@@ -37,8 +44,6 @@ Everything in Open Source, plus:
 - Dedicated forward deployed engineer
 
 [Schedule a Demo →](https://inkeep.com/demo)
-
----
 
 ## Feature Comparison
 
