--- a/agents-docs/content/docs/typescript-sdk/credentials/env-aware-credentials.mdx
+++ b/agents-docs/content/docs/typescript-sdk/credentials/env-aware-credentials.mdx
@@ -84,3 +84,16 @@ export const stripeTool = mcpTool({
 ```
 
 This pattern is useful if you want to keep track of different credentials for different environments. When you push your project using the [Inkeep CLI](/typescript-sdk/cli-reference#inkeep-push) `inkeep push` command with the `--env` flag, the credentials will be loaded from the appropriate environment file. For example, if you run `inkeep push --env development`, the credentials will be loaded from the `environments/development.env.ts` file.
+
+### CLI Environment Variables
+
+The CLI respects these environment variables when using the `--env` flag:
+
+```bash
+# Set environment name via environment variable
+export INKEEP_ENV=production
+inkeep push  # Uses production environment automatically
+
+# Override via CLI (takes precedence)
+inkeep push --env development  # Uses development instead
+```
