--- a/agents-docs/content/docs/typescript-sdk/memory.mdx
+++ b/agents-docs/content/docs/typescript-sdk/memory.mdx
@@ -23,7 +23,7 @@ The conversation history now includes:
 By default, the system includes conversation history using these limits:
 
 - **50 messages**: Up to the 50 most recent messages from the conversation
-- **8,000 tokens**: Maximum of 8,000 tokens from previous conversation messages (increased from 4,000 to accommodate tool results)
+- **8,000 tokens**: Maximum of 8,000 tokens from previous conversation messages
 
 <Note>
   The 50-message and 8,000-token limits are the default values. The token limit can be adjusted via the `AGENTS_CONVERSATION_HISTORY_MAX_OUTPUT_TOKENS_DEFAULT` environment variable if needed.
