--- a/agents-docs/content/docs/typescript-sdk/models.mdx
+++ b/agents-docs/content/docs/typescript-sdk/models.mdx
@@ -55,6 +55,8 @@ const mySubAgent = subAgent({
 | **Google** | `google/gemini-2.5-flash`<br/>`google/gemini-2.5-flash-lite` | `GOOGLE_GENERATIVE_AI_API_KEY` |
 | **OpenRouter** | `openrouter/anthropic/claude-sonnet-4-0`<br/>`openrouter/meta-llama/llama-3.1-405b` | `OPENROUTER_API_KEY` |
 | **Gateway** | `gateway/openai/gpt-4.1-mini` | `AI_GATEWAY_API_KEY` |
+| **NVIDIA NIM** | `nim/nvidia/llama-3.3-nemotron-super-49b-v1.5`<br/>`nim/nvidia/nemotron-4-340b-instruct` | `NIM_API_KEY` |
+| **Custom OpenAI-compatible** | `custom/my-custom-model`<br/>`custom/llama-3-custom` | `CUSTOM_LLM_API_KEY` |
 
 <Note>*`openai/gpt-5`, `openai/gpt-5-mini`, and `openai/gpt-5-nano` require a verified OpenAI organization. If your organization is not yet verified, these models will not be available.</Note>
 
@@ -209,6 +211,36 @@ models: {
 ```
 </Tab>
 </Tabs>
+
+**Custom OpenAI-compatible provider:**
+
+<Tabs>
+<Tab title="TypeScript">
+```typescript
+models: {
+  base: {
+    model: "custom/my-custom-model",
+    providerOptions: {
+      baseURL: "https://api.example.com/v1",  // Required
+      temperature: 0.7
+    }
+  }
+}
+```
+</Tab>
+<Tab title="JSON">
+```json
+{
+  "baseUrl": "http://127.0.0.1:8090/v1",
+  "temperature": 0.7
+}
+```
+</Tab>
+</Tabs>
+
+<Note>
+Custom OpenAI-compatible providers **require** a base URL to be specified in `providerOptions.baseURL` or `providerOptions.baseUrl`. The `CUSTOM_LLM_API_KEY` environment variable will be automatically used for authentication if present.
+</Note>
 
 ## CLI Defaults
 
