connect your data section done

--- a/agents-docs/content/docs/community/inkeep-community.mdx
+++ b/agents-docs/content/docs/community/inkeep-community.mdx
@@ -20,7 +20,7 @@ You can also find us on:
   <Card title="GitHub" icon="LuGithub" href="https://github.com/inkeep/agents">
     Star the repo, open issues, and contribute.
   </Card>
-  <Card title="YouTube" icon="LuYoutube" href="https://www.youtube.com/@inkeep-ai">
+  <Card title="YouTube" icon="brand/Youtube" href="https://www.youtube.com/@inkeep-ai">
     Practical demos, tutorials, and deep dives.
   </Card>
   <Card title="LinkedIn" icon="LuLinkedin" href="https://www.linkedin.com/company/inkeep/">
